@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018 Remain Software
+ * Copyright (c) 2018, 2025 Remain Software
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -17,7 +17,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.eclipse.core.runtime.AssertionFailedException;
@@ -34,73 +35,77 @@ public class TipImageURLTest {
 
 	@Test
 	public void testTipImage3() {
-		assertThrows(MalformedURLException.class, () -> new TipImage(new URL("0gl kjfslkfjsl dkfjsldkfjl")));
+		assertThrows(URISyntaxException.class, () -> new TipImage(new URI("0gl kjfslkfjsl dkfjsldkfjl").toURL()));
 	}
 
 	@Test
-	public void testTipImage2() throws IOException {
+	public void testTipImage2() throws IOException, URISyntaxException {
 		getTipImage();
 	}
 
-	private TipImage getTipImage() throws IOException {
-		return new TipImage(new URL(URL));
+	private TipImage getTipImage() throws IOException, URISyntaxException {
+		return new TipImage(new URI(URL).toURL());
 	}
 
 	@Test
-	public void testSetMaxHeight() throws IOException {
-		String imgAttributes = new TipImage(new URL(URL)).setAspectRatio(2).setMaxHeight(300).getIMGAttributes(200,
+	public void testSetMaxHeight() throws IOException, URISyntaxException {
+		String imgAttributes = new TipImage(new URI(URL).toURL()).setAspectRatio(2).setMaxHeight(300)
+				.getIMGAttributes(200,
 				200);
 		assertThat(imgAttributes.trim()).isEqualToIgnoringCase("width=\"200\" height=\"100\"");
 	}
 
 	@Test
-	public void testSetMaxWidth() throws IOException {
-		String imgAttributes = new TipImage(new URL(URL)).setAspectRatio(1.6).setMaxWidth(200).getIMGAttributes(400,
+	public void testSetMaxWidth() throws IOException, URISyntaxException {
+		String imgAttributes = new TipImage(new URI(URL).toURL()).setAspectRatio(1.6).setMaxWidth(200)
+				.getIMGAttributes(400,
 				300);
 		assertThat(imgAttributes.trim()).isEqualToIgnoringCase("width=\"200\" height=\"125\"");
 	}
 
 	@Test
 	public void testAssertWidth() {
-		assertThrows(AssertionFailedException.class, () -> new TipImage(new URL(URL)).setAspectRatio(0, 100, false));
+		assertThrows(AssertionFailedException.class,
+				() -> new TipImage(new URI(URL).toURL()).setAspectRatio(0, 100, false));
 	}
 
 	@Test
 	public void testAssertHeight() {
-		assertThrows(AssertionFailedException.class, () -> new TipImage(new URL(URL)).setAspectRatio(1000, 0, false));
+		assertThrows(AssertionFailedException.class,
+				() -> new TipImage(new URI(URL).toURL()).setAspectRatio(1000, 0, false));
 	}
 
 	@Test
-	public void testSetAspectRatioIntIntFalse() throws IOException {
+	public void testSetAspectRatioIntIntFalse() throws IOException, URISyntaxException {
 		String result = getTipImage().setAspectRatio(200, 50, false).getIMGAttributes(100, 100).trim();
 		assertThat(result).isEqualToIgnoringCase("width=\"100\" height=\"25\"");
 	}
 
 	@Test
-	public void testSetAspectRatioIntIntTrue() throws IOException {
+	public void testSetAspectRatioIntIntTrue() throws IOException, URISyntaxException {
 		String result = getTipImage().setAspectRatio(400, 300, true).getIMGAttributes(740, 370).trim();
 		assertThat(result).isEqualToIgnoringCase("width=\"400\" height=\"300\"");
 	}
 
 	@Test
-	public void testSetAspectRatioDouble() throws IOException {
+	public void testSetAspectRatioDouble() throws IOException, URISyntaxException {
 		String result = getTipImage().setAspectRatio(1.5).getIMGAttributes(740, 370).trim();
 		assertThat(result).isEqualToIgnoringCase("width=\"555\" height=\"370\"");
 	}
 
 	@Test
-	public void testGetIMGAttributes() throws IOException {
+	public void testGetIMGAttributes() throws IOException, URISyntaxException {
 		String result = getTipImage().setAspectRatio(1.5).getIMGAttributes(740, 370).trim();
 		assertThat(result).isEqualToIgnoringCase("width=\"555\" height=\"370\"");
 	}
 
 	@Test
-	public void testSetExtension() throws IOException {
+	public void testSetExtension() throws IOException, URISyntaxException {
 		assertThat(getTipImage().getBase64Image()).contains("png");
 	}
 
 	@Test
-	public void testSetExtension2() throws IOException {
+	public void testSetExtension2() throws IOException, URISyntaxException {
 		assertThat(getTipImage().setExtension("bmp").getBase64Image()).contains("bmp");
 	}
 }
